# ai-agents-lab

./: .env.example  .gitignore  README.md  pyproject.toml
beginner/01-simple-chatbot/: README.md  main.py  requirements.txt
config/: default.yaml
config/agents/: simple-chatbot.yaml
shared/: __init__.py  config.py  llm.py  logging.py  models.py  retry.py
shared/llm_pkg/: __init__.py  base.py  usage.py
shared/llm_pkg/providers/: __init__.py  anthropic.py  gemini.py  groq.py  openai.py
shared/metrics/: __init__.py  __main__.py  backend.py  models.py  repository.py
shared/metrics/backends/: __init__.py  noop_backend.py  sqlite_backend.py
shared/metrics/repositories/: __init__.py  inmemory_repository.py  sqlite_repository.py
shared/utils/: conversation.py
tests/: conftest.py  test_chatbot.py  test_config.py  test_llm_base.py  test_metrics_backend.py  test_metrics_integration.py  test_metrics_models.py  test_metrics_repository.py  test_models.py  test_retry.py
